crates/toml/tests/snapshots/invalid/string/bad-escape-04.stderr
TOML parse error at line 1, column 11
  |
1 | a = "a \\\ b"
  |           ^
missing escaped value, expected `b`, `f`, `n`, `r`, `\`, `"`, `u`, `U`
